--- a/css/body.css
+++ b/css/body.css
@@ -70,5 +70,17 @@ nav li a {
   font-weight: bold;
   text-align: center;
   margin: 50px 0;
-  color: black;
+  color: white;
 }
+#druid-image {
+  transition: filter 0.5s;
+}
+
+.darker {
+  filter: brightness(0.6);
+}
+
+.lighter {
+  filter: brightness(1);
+}
+
